[package]
name = "odbcx"
version = "0.1.1"
edition = "2021"
authors = ["Andreas Longo <git@andreaslongo.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/andreaslongo/odbcx"
description = "A CLI utility for sending SQL queries to a database via ODBC"

[dependencies]
anyhow = "1.0.86"
csv = "1.3.0"
dotenv = "0.15.0"
human-panic = "2.0.0"
odbc-api = "8.1.2"
